--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # Test binary, built with `go test -c`
 *.test
 
+# Binary built with `go build main.go`
+main
+
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
